--- a/blog-post.html
+++ b/blog-post.html
@@ -19,13 +19,17 @@
   <main>
     <article>
       <header>
-        <h1>First Blog Post</h1>
+        <h1>The Journey of Learning Web Development</h1>
         <p>By Jane Doe | Published on December 5, 2024</p>
       </header>
       <section>
-        <p>Welcome to the first blog post. This is where the content goes.</p>
-        <blockquote>“A great quote about life.”</blockquote>
+        <figure class="blog-post-banner">
+          <img src="assets/images/post-banner.png" alt="Web Development">
+          <figcaption>Learning Web Development is a rewarding journey.</figcaption>
+        </figure>
+        <p>Web development has grown to be one of the most sought-after skills...</p>
       </section>
+      <button onclick="location.href='index.html'">Back to Home</button>
     </article>
 
     <aside class="author-info">
